--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "angular": "^1.6.3",
     "body-parser": "^1.17.2",
+    "d3-time-format": "^2.1.3",
     "express": "^4.15.0",
+    "faker": "^4.1.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.10.8",
     "mysql": "^2.13.0",
@@ -27,6 +29,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-popup": "^0.9.3",
-    "react-svg-flexbox": "^0.3.0"
+    "react-svg-flexbox": "^0.3.0",
+    "react-vis": "^1.10.7"
   }
 }
